Simplify class structure